--- a/WeBuyForYou/res/layout/list_single.xml
+++ b/WeBuyForYou/res/layout/list_single.xml
@@ -1,28 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
     android:orientation = "horizontal" >
         <ImageView
             android:id="@+id/img"
+            android:background="@drawable/smiley"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_margin="5dp"
             android:layout_alignParentLeft="true"/>
         <LinearLayout 
             android:id="@+id/details"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="wrap_content"
+		    android:layout_margin="5dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_marginLeft="5dp">
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" 
+            android:layout_margin="5dp"
             android:textColor="#ffffffff"
             android:layout_alignRight="@id/img"/>
         <TextView
             android:id="@+id/dateofbirth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" 
+            android:layout_margin="5dp"
             android:textColor="#ffffffff"
             android:layout_alignRight="@id/img"/>
         </LinearLayout>
