--- a/WeBuyForYou/res/values/arrays.xml
+++ b/WeBuyForYou/res/values/arrays.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="entries_list_preference">
-        <item>Alpha Option 01</item>
-        <item>Beta Option 02</item>
-        <item>Charlie Option 03</item>  
+        <item>10 Days</item>
+        <item>8 days</item>
+        <item>5 days</item>  
     </string-array>
 
     <string-array name="entryvalues_list_preference">
