--- a/WeBuyForYou/res/xml/preferences.xml
+++ b/WeBuyForYou/res/xml/preferences.xml
@@ -18,29 +18,14 @@
 <PreferenceScreen
         xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <PreferenceCategory
-            android:title="inline_preferences">
-
-        <CheckBoxPreference
-                android:key="checkbox_preference"
-                android:title="title_checkbox_preference"
-                android:summary="summary_checkbox_preference" />
-
-    </PreferenceCategory>
 
     <PreferenceCategory
             android:title="dialog_based_preferences">
 
-        <EditTextPreference
-                android:key="edittext_preference"
-                android:title="title_edittext_preference"
-                android:summary="summary_edittext_preference"
-                android:dialogTitle="dialog_title_edittext_preference" />
-
         <ListPreference
                 android:key="list_preference"
-                android:title="title_list_preference"
-                android:summary="summary_list_preference"
+                android:title="Reminder choose option"
+                android:summary="You can select your occation remainder based on your wish"
                 android:entries="@array/entries_list_preference"
                 android:entryValues="@array/entryvalues_list_preference"
                 android:dialogTitle="dialog_title_list_preference" />
@@ -58,24 +43,6 @@
                     android:data="http://www.webuyforyou.in/" />
 
         </PreferenceScreen>
-
-    </PreferenceCategory>
-
-    <PreferenceCategory
-            android:title="preference_attributes">
-
-        <CheckBoxPreference
-                android:key="parent_checkbox_preference"
-                android:title="title_parent_preference"
-                android:summary="summary_parent_preference" />
-
-        <!-- The visual style of a child is defined by this styled theme attribute. -->
-        <CheckBoxPreference
-                android:key="child_checkbox_preference"
-                android:dependency="parent_checkbox_preference"
-                android:layout="?android:attr/preferenceLayoutChild"
-                android:title="title_child_preference"
-                android:summary="summary_child_preference" />
 
     </PreferenceCategory>
 
