--- a/WeBuyForYou/res/layout/settings_layout.xml
+++ b/WeBuyForYou/res/layout/settings_layout.xml
@@ -1,73 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="8dp" >
+    android:layout_height="match_parent" >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="16dp" >
 
-        <TextView
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Birthday remainder"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:orientation="horizontal" >
 
-        <Spinner
-            android:id="@+id/birthday_spinner"
-            android:layout_width="0dp"
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/birthday_remainder"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <Spinner
+                android:id="@+id/birthday_spinner"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:entries="@array/birthday_list_preference" />
+        </LinearLayout>
+
+        <!-- Days remainder -->
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:entries="@array/birthday_list_preference" />
+            android:orientation="horizontal"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp" >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/day_remainder"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <Spinner
+                android:id="@+id/day_spinner"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:entries="@array/remainder_days_list_preference" />
+        </LinearLayout>
+
+        <!-- Time remainder -->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp" >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/time_remainder"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <TextView
+                android:id="@+id/time_spinner"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/birthday_textfield_default_holo_light"
+                android:text="08:00 AM"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+        </LinearLayout>
     </LinearLayout>
-
-    <!-- Days remainder -->
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/bottom_button"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/birthday_color_1"
         android:orientation="horizontal" >
 
-        <TextView
+        <Button
+            android:id="@+id/cancel_button"
+            style="@style/Buttonbirthday"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Day remainder"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:layout_weight=".48"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
+            android:text="@string/btn_cancel"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#fff" />
 
-        <Spinner
-            android:id="@+id/day_spinner"
+        <View
+            android:layout_width="1dp"
+            android:layout_height="fill_parent"
+            android:background="#333333" />
+
+        <Button
+            android:id="@+id/save_button"
+            style="@style/Buttonbirthday"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            
-            android:entries="@array/remainder_days_list_preference" />
+            android:layout_weight=".48"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
+            android:text="@string/btn_save"
+            android:textColor="#fff" />
     </LinearLayout>
 
-    <!-- Time remainder -->
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Time remainder"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-        <Spinner
-            android:id="@+id/time_spinner"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:entries="@array/remainder_time_list_preference" />
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
