--- a/WeBuyForYou/res/values/arrays.xml
+++ b/WeBuyForYou/res/values/arrays.xml
@@ -2,8 +2,8 @@
 <resources>
 
     <string-array name="birthday_list_preference">
-        <item>5 Days</item>
-        <item>8 Days</item>
+        <item>5 days</item>
+        <item>8 days</item>
         <item>10 days</item>
         <item>15 days</item>
     </string-array>
