--- a/WeBuyForYou/res/layout/list_single.xml
+++ b/WeBuyForYou/res/layout/list_single.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/card"
@@ -9,14 +9,17 @@
         android:id="@+id/img"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_gravity="center_vertical"
-        android:background="@drawable/smiley"
-        android:padding="8dp" />
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:padding="8dp"
+        android:src="@drawable/smiley" />
 
     <LinearLayout
         android:id="@+id/details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/star_imageview"
+        android:layout_toRightOf="@+id/img"
         android:orientation="vertical"
         android:padding="8dp" >
 
@@ -39,4 +42,18 @@
             android:textColor="#000" />
     </LinearLayout>
 
-</LinearLayout>
+    <!-- Star Imageview -->
+
+    <ImageView
+        android:id="@+id/star_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_margin="16dp"
+        android:background="#777"
+        android:padding="16dp"
+        android:src="@drawable/ic_stat_star" />
+
+</RelativeLayout>
