--- a/WeBuyForYou/res/menu/menu_home.xml
+++ b/WeBuyForYou/res/menu/menu_home.xml
@@ -17,5 +17,10 @@
         android:orderInCategory="300"
         android:showAsAction="never"
         android:title="@string/menu_about"/>
+    <item
+        android:id="@+id/action_favorite"
+        android:orderInCategory="400"
+        android:showAsAction="never"
+        android:title="@string/menu_favorite"/>
 
 </menu>
