--- a/WeBuyForYou/res/layout/dialogdate.xml
+++ b/WeBuyForYou/res/layout/dialogdate.xml
@@ -2,38 +2,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="#95a5a6"
     android:orientation="vertical"
     android:padding="10dp" >
 
-    <TextView
-        android:id="@+id/date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="EnterName occasion and Date : "
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/name_edittext"
         style="@style/EditTextbirthday"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Name of the person" >
+        android:hint="@string/hint_name" >
     </EditText>
 
-    <EditText
+    <Spinner
         android:id="@+id/occasion"
         style="@style/EditTextbirthday"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="occasion" >
-    </EditText>
+        android:entries="@array/events"
+        android:hint="@string/hint_occasion" >
+    </Spinner>
 
-    <EditText
+    <TextView
         android:id="@+id/dob"
-        style="@style/EditTextbirthday"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter date like this 1990-09-28" >
-    </EditText>
+        android:background="@drawable/birthday_textfield_default_holo_light"
+        android:text="Date" >
+    </TextView>
 
 </LinearLayout>
