--- a/WeBuyForYou/res/layout/profilescreen.xml
+++ b/WeBuyForYou/res/layout/profilescreen.xml
@@ -4,14 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <ImageView 
+    <ImageView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/smiley"/>
+        android:layout_height="wrap_content" />
 
-    <Button 
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Would you like to consult us for send gifts"/>
-    
+        android:text="Would you like to consult us for send gifts" />
+
 </LinearLayout>
