--- a/WeBuyForYou/res/layout/list_row_birthday.xml
+++ b/WeBuyForYou/res/layout/list_row_birthday.xml
@@ -11,8 +11,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="center_vertical"
-        android:layout_margin="5dp"
-        android:background="@drawable/smiley" />
+        android:layout_margin="5dp" />
 
     <LinearLayout
         android:id="@+id/details"
