--- a/WeBuyForYou/res/layout/list_single.xml
+++ b/WeBuyForYou/res/layout/list_single.xml
@@ -7,12 +7,14 @@
 
     <ImageView
         android:id="@+id/img"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:padding="8dp"
-        android:src="@drawable/smiley" />
+        android:paddingBottom="8dp"
+        android:paddingLeft="8dp"
+        android:paddingTop="8dp"
+        android:src="@drawable/ic_launcher" />
 
     <LinearLayout
         android:id="@+id/details"
@@ -44,7 +46,9 @@
 
     <!-- Star Imageview -->
 
-    <ImageView
+
+    <!--
+         <ImageView
         android:id="@+id/star_imageview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -55,5 +59,18 @@
         android:background="#777"
         android:padding="16dp"
         android:src="@drawable/ic_stat_star" />
+    -->
+
+    <CheckBox
+        android:id="@+id/checkbox_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_margin="16dp"
+        android:background="#212121"
+        android:focusable="false"
+        android:focusableInTouchMode="false" />
 
 </RelativeLayout>
